fixed white line on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -385,7 +385,7 @@ a {
 }
 
 .plan--popular {
-    transform: scale(1.1);
+    transform: scale(1);
 }
 
 .plan--popular .card__header {
@@ -405,10 +405,6 @@ a {
     transform: scale(1.05);
 }
 
-.plan--popular:hover {
-    transform: scale(1.15);
-}
-
 @media screen and (min-width: 1024px) {
     .plan__name {
         font-size: 1.4rem;
@@ -425,6 +421,11 @@ a {
     .plan__description{
         font-size: 1.7rem;
     }
+
+    .plan--popular:hover {
+        transform: scale(1.15);
+    }
+    
 }
 
 /* Media */
